--- a/project.private.config.json
+++ b/project.private.config.json
@@ -16,6 +16,13 @@
           "scene": null
         },
         {
+          "name": "pages/home/home",
+          "pathName": "pages/home/home",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "pages/audiolist/audiolist",
           "pathName": "pages/audiolist/audiolist",
           "query": "",
